feat: Наметил базовую разметку

--- a/src/blocks/App/App.css
+++ b/src/blocks/App/App.css
@@ -1,11 +1,3 @@
 .App {
-  text-align: center;
-}
-
-.App-Title {
-  font-size: 1.5em;
-}
-
-.App-Intro {
-  font-size: large;
+  text-align: left;
 }
