--- a/src/blocks/App/Header/App-Header.css
+++ b/src/blocks/App/Header/App-Header.css
@@ -1,6 +1,4 @@
 .App-Header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  padding-top: 4.6rem;
+  padding-bottom: 4rem;
 }
