--- a/src/blocks/FeedItem/Body/FeedItem-Body.css
+++ b/src/blocks/FeedItem/Body/FeedItem-Body.css
@@ -1,3 +1,24 @@
 .FeedItem-Body {
-  font-size: inherit;
+  grid-column: span 3;
+  padding-bottom: 0.8rem;
+  position: relative;
+}
+
+.FeedItem-ImageContainer::after {
+  display: block;
+  content: "";
+  background-color: #fff;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  height: 100%;
+  transition: opacity 0.1s ease-out;
+}
+
+.FeedItem-Image {
+  position: relative;
+  display: block;
+  width: 100%;
 }
