--- a/src/blocks/FeedItem/Header/FeedItem-Header.css
+++ b/src/blocks/FeedItem/Header/FeedItem-Header.css
@@ -1,3 +1,22 @@
 .FeedItem-Header {
-  font-size: inherit;
+  font-weight: bold;
+  grid-column: span 3;
+  margin: 0 -0.8rem;
+}
+
+.FeedItem-TitleContainer {
+  box-sizing: border-box;
+  background-color: #fff;
+  max-height: 4.10526316em;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  padding-bottom: 0.9rem;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+
+.FeedItem-Title {
+  max-height: 3.63157895em;
+  overflow: hidden;
 }
