feat: Убрал ссылку со всего FeedItem

--- a/src/blocks/FeedItem/Body/FeedItem-Body.css
+++ b/src/blocks/FeedItem/Body/FeedItem-Body.css
@@ -4,6 +4,10 @@
   position: relative;
 }
 
+.FeedItem-ImageContainer {
+  display: block;
+}
+
 .FeedItem-ImageContainer::after {
   display: block;
   content: "";
