--- a/src/blocks/Button/Button.css
+++ b/src/blocks/Button/Button.css
@@ -1,3 +1,11 @@
 .Button {
   touch-action: manipulation;
 }
+
+.Button:hover {
+  filter: brightness(0.7);
+}
+
+.Button:active {
+  filter: brightness(0.4);
+}
