--- a/src/blocks/FeedItem/FeedItem.css
+++ b/src/blocks/FeedItem/FeedItem.css
@@ -1,3 +1,14 @@
+.FeedItem-Container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: max-content auto;
+  grid-gap: 0;
+  position: relative;
+  height: 100%;
+  color: #000;
+  text-decoration: none;
+}
+
 @media screen {
   .FeedItem:hover .FeedItem-ImageContainer::after {
     opacity: 0.4;
