--- a/src/blocks/FeedItem/Header/FeedItem-Header.css
+++ b/src/blocks/FeedItem/Header/FeedItem-Header.css
@@ -5,21 +5,19 @@
 }
 
 .FeedItem-TitleContainer {
+  display: block;
   box-sizing: border-box;
   background-color: #fff;
   max-height: 4.10526316em;
-  margin: 0 -0.8rem;
-  padding-left: 0.8rem;
-  padding-right: 0.8rem;
   padding-bottom: 0.9rem;
   position: relative;
-  width: calc(100% + 2 * 0.8rem);
+  width: 100%;
+  text-decoration: none;
 }
 
 .FeedItem-Title {
   display: block;
   max-height: 3.63157895em;
   overflow: hidden;
-  text-decoration: none;
 }
 
