--- a/src/blocks/Container/_grid/Container_grid.css
+++ b/src/blocks/Container/_grid/Container_grid.css
@@ -1,4 +1,4 @@
-.Container-Grid {
+.Container_grid {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: auto;
@@ -7,14 +7,14 @@
 }
 
 @media (min-width: 361px) {
-  .Container-Grid {
+  .Container_grid {
     grid-column-gap: 1.6rem;
     grid-auto-flow: dense;
   }
 }
 
 @media (min-width: 728px) {
-  .Container-Grid {
+  .Container_grid {
     grid-column-gap: 1.6rem;
     grid-auto-flow: initial;
   }
